--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,5 @@
-# Build outputs
+# directories
 out/
-*.exe
-*.obj
-*.pdb
-*.ilk
-*.lib
 
 # Old work directory
 old_tutoring/
-
-# Compiled shaders
-*.spv
-
-# IDE files
-.vs/
-*.vcxproj
-*.sln
-
-# OS files
-.DS_Store
-Thumbs.db
